<resources>
    <string name="app_name">USB Tx</string>
    <string name="Setting">Setting</string>
    <string name="Area">Area</string>
    <string name="to_give">The application might use your area to give you local content</string>
    <string name="Select">Select</string>
    <string name="Languages">Languages</string>
    <string name="Languages_info">An application will appear in the first language in the list that they support.
    </string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Sign_in">Sign in</string>
    <string name="E_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="Create_your_email_account">Create your email account</string>
    <string name="Account_Number">Account Number</string>
    <string name="Choose_a_password">Choose a password</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Product_serial_number">Product serial number</string>
    <string name="Personal_details">Personal details</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Company">Company</string>
    <string name="Contact_Phone_Number">Contact Phone Number</string>
    <string name="Physical_address_Mailing_address">Physical address / Mailing address</string>
    <string name="Street">Street</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="ZP_Code">ZP_Code</string>
    <string name="cancel">cancel</string>
    <string name="Set_up">Set up</string>
    <string name="store_type">Store type</string>
</resources>