<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdminActivity.SetArea" android:background="#EFE8E1">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp" android:background="@color/colorPrimary" android:id="@+id/toolbar">

        <TextView
                android:text="@string/Setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView18" android:textColor="@color/white"
                android:gravity="center" android:textSize="20dp"/>
    </RelativeLayout>
    <Button
            android:text="@string/Set_up"
            android:layout_width="match_parent"
            android:layout_height="56dp" android:id="@+id/next" android:layout_alignParentBottom="true"
            android:background="@color/buttoncolor" android:textColor="@color/white" android:onClick="onclick"/>
    <TextView
            android:text="@string/Area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView19" android:layout_below="@id/toolbar"
            android:layout_marginTop="39dp" android:layout_marginLeft="29dp" android:textSize="20sp"
            android:textColor="@android:color/black" android:textStyle="bold"/>
    <TextView
            android:text="@string/to_give"
            android:layout_width="wrap_content"
            android:id="@+id/textView20" android:layout_below="@id/textView19"
            android:layout_marginLeft="29dp" android:layout_height="wrap_content" android:layout_marginTop="5dp"
            android:textSize="17sp" android:textColor="@android:color/black" android:layout_marginRight="28dp"
            android:lineSpacingMultiplier="1.2"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="48dp" android:id="@+id/spinner" android:layout_below="@id/textView20"
            android:layout_marginTop="12dp" android:layout_marginLeft="27dp" android:layout_marginRight="28dp"
            android:background="@color/white"/>
    <TextView
            android:text="@string/Languages"
            android:layout_width="match_parent"
            android:layout_height="40dp" android:id="@+id/textView21" android:layout_below="@id/spinner"
            android:layout_marginLeft="27dp" android:layout_marginTop="39dp"
            android:textColor="@android:color/background_dark" android:textSize="20sp"
            android:gravity="center_vertical" android:textStyle="bold"/>
    <TextView
            android:text="@string/Languages_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView22" android:layout_below="@id/textView21"
            android:layout_marginLeft="27dp" android:layout_marginRight="27dp" android:layout_marginTop="5dp"
            android:textSize="17sp" android:textColor="@android:color/background_dark"
            android:lineSpacingMultiplier="1.2"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/spinner3" android:layout_below="@id/textView22"
            android:layout_marginTop="11dp" android:layout_marginLeft="27dp" android:layout_marginRight="28dp"
            android:background="@color/white"/>
</RelativeLayout>